--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <header class="main-navigation">
     <div class="container nav-container">
       <h1 class="logo-heading">Fun Bus</h1>
+      <img class="funBus off" src="img/bus.png" draggable='true' ondragstart='event.dataTransfer.setData("text/plain",null)'>
       <nav class="nav">
         <a class="nav-link" href="#">Home</a>
         <a class="nav-link" href="#">About Us</a>
@@ -30,16 +31,21 @@
       </nav>
     </div>
   </header>
-     
+  
+  <audio id='honk' src='img/bus.mp3' loop='false' volume='60'></audio>
+  <img class='dropzone off' src='img/busdragzone.png'>
+  <img class='dropzone2 off' src='img/busdragzone.png'>
+
   <div class="container home">
     <header class="intro">
-      <img src="img/fun-bus.jpg" alt="bus in the sand">
-      <h2>Welcome To Fun Bus!</h2>
+      <img id='busImg' src="img/fun-bus.jpg" alt="bus in the sand">
+      <p id="busImgText">^^^ Double Click Me! ^^^</p><br>
+      <h2 id='a'>Welcome To Fun Bus!</h2>
       <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
     </header>
     <section class="content-section">
       <div class="text-content">
-        <h2>Let's Go!</h2>
+        <h2 id='b'>Let's Go!</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
       </div>
@@ -52,14 +58,14 @@
           <img src="img/fun.jpg" class="img-fluid rounded" alt="Lets have fun!">
       </div>
       <div class="text-content">
-        <h2>Adventure Awaits</h2>
+        <h2 id='c'>Adventure Awaits</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
       </div>
      
     </section>
     <section class="content-destination">
-      <h2>Pick Your Destination</h2>
+      <h2 id='d'>Pick Your Destination</h2>
       <p>Expedition excursion design darn excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
       <img src="img/destination.jpg" alt="Second slide">
     </section>
